--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "cypress:test": "npx cypress run --config-file cypress.config.js",
-    "cypress:visual": "npx percy exec -- cypress run --config-file cypress.config.js"
+    "cypress:visual": "npx percy exec -- cypress run --config-file cypress.config.js",
+    "merge_jsons": "mochawesome-merge cypress/reports/html/.jsons/*.json > cypress/reports/output.json",
+    "cypress:report": "mochawesome-merge cypress/reports/html/.jsons/*.json > cypress/reports/output.json && marge cypress/reports/output.json --reportDir ./ --inline"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -18,6 +20,10 @@
     "@percy/cli": "^1.28.5",
     "@percy/cypress": "^3.1.2",
     "bootstrap": "^5.3.3",
+    "mocha": "^10.4.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +36,7 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "cypress": "^13.8.1",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
