Setup the master branch name

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "cypress:test": "npx cypress run --config-file cypress.config.js",
-    "cypress:visual": "PERCY_BRANCH=BuyButton-feature percy exec -- cypress run --config-file cypress.config.js"
+    "cypress:visual": "PERCY_BRANCH=master percy exec -- cypress run --config-file cypress.config.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
